# promtool

./: Cargo.toml  README.md
examples/golang_prom_metrics/: go.mod  main.go
src/: main.rs
